5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1756_1189.log
== TEST (2019-05-28 12:28:46) 
-- CODE:
s = input("caracteres: ")
t = []
t.append(s)
print(str(t).replace(' '',''))
-- ERROR:
File "XXXX", line 4
    print(str(t).replace(' '',''))
                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:29:59) 
-- CODE:
s = input("caracteres: ")
t = []
t.append(s)
print(str(t).replace(' ','').upper()
-- ERROR:
File "XXXX", line 5
    
                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:30:23) 
-- CODE:
s = input("caracteres: ")
t = []
t.append(s)
print(str(t).replace(' ',''))
-- EXECUTION TIME:
0.180196
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
['ACARARAJADADAJARARACA']
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
['CACHORRO']
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
['amalanadanalama']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:30:28) 
-- CODE:
s = input("caracteres: ")
t = []
t.append(s)
print(str(t).replace(' ',''))
-- OUTPUT:
['ACARARAJADADAJARARACA']
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:30:46) 
-- CODE:
s = input("caracteres: ")
t = []
t.append(s)
print(str(t).replace(' ','')).upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(str(t).replace(' ','')).upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:31:18) 
-- CODE:
s = input("caracteres: ")
t = []
t.append(s)
print(str(t).replace(' ',)).upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(str(t).replace(' ',)).upper()
TypeError: replace() takes at least 2 arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:31:34) 
-- CODE:
s = input("caracteres: ")
t = []
t.append(s)
print(str(t).replace(' ')).upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(str(t).replace(' ')).upper()
TypeError: replace() takes at least 2 arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:31:57) 
-- CODE:
s = input("caracteres: ")
t = []
t.append(s)
print(t.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(t.upper())
AttributeError: 'list' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:32:20) 
-- CODE:
s = input("caracteres: ")
t = []
t.append(s)
print(t).upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(t).upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:32:59) 
-- CODE:
s = input("caracteres: ")
t = []
t.append(s)
print(t)
-- OUTPUT:
['ACARARAJADADAJARARACA']
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:35:35) 
-- CODE:
s = input("caracteres: ").upper()
t = []
t.append(s)
print(t)
-- OUTPUT:
['ACARARAJADADAJARARACA']
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:37:38) 
-- CODE:
s = input("caracteres: ").upper()
t = []
t.append(s)
print(str(t).replace("'", ""))
-- OUTPUT:
[ACARARAJADADAJARARACA]
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:43:52) 
-- CODE:
s = input("caracteres: ").upper()

print(str(s).replace("'", ""))
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:45:28) 
-- CODE:
s = input("caracteres: ").upper()

print(s)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:47:46) 
-- CODE:
s = input("caracteres: ").upper()
if (s[0:] == s[-1:]):
	print(s)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:48:22) 
-- CODE:
s = input("caracteres: ").upper()
if (s[0:] == s[:-1]):
	print(s)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:49:15) 
-- CODE:
s = input("caracteres: ").upper()
t = []
v = t.append(s)
if (t[0:] == t[:-1]):
	print(s)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:49:51) 
-- CODE:
s = input("caracteres: ").upper()
t = []
v = t.append(s)
if (t[0:] == t[:-1]):
	print(t)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:50:44) 
-- CODE:
s = input("caracteres: ").upper()
t = []
v = t.append(s)
c = 0
while (c < size(t))
if (t[0:] == t[:-1]):
	print(t)
-- ERROR:
File "XXXX", line 5
    while (c < size(t))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:51:39) 
-- CODE:
s = input("caracteres: ").upper()
t = []
v = t.append(s)
c = 0
while (c < size(t)):
	if (t[0:] == t[:-1]):
		print(t)
		c = 1
	c = c + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while (c < size(t)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:52:39) 
-- CODE:
s = input("caracteres: ").upper()
t = []
v = t.append(s)
c = 0
while (c < size(t)):
	if (t[s:] == t[:-s]):
		print(t)
		c = 1
	c = c + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while (c < size(t)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:53:20) 
-- CODE:
from numpy import*
s = input("caracteres: ").upper()
t = []
v = t.append(s)
c = 0
while (c < size(t)):
	if (t[s:] == t[:-s]):
		print(t)
		c = 1
	c = c + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:53:50) 
-- CODE:
from numpy import*
s = input("caracteres: ").upper()
t = []
v = t.append(s)
c = 0
while (c < size(t)):
	if (t[s:] == t[-1:]):
		print(t)
		c = 1
	c = c + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:20:33) 
-- CODE:
from numpy import*
s = input("caracteres: ").upper()
t = []
v = t.append(s)
c = 0
while (c < size(t)):
	if (t[s:] == t[-1:]):
		print(t)
		c = 1
	c = c + 1
print(str(c).replace(' ','')
-- ERROR:
File "XXXX", line 12
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:20:48) 
-- CODE:
from numpy import*
s = input("caracteres: ").upper()
t = []
v = t.append(s)
c = 0
while (c < size(t)):
	if (t[s:] == t[-1:]):
		print(t)
		c = 1
	c = c + 1
print(str(c).replace(' ',''))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:22:29) 
-- CODE:
from numpy import*
s = input("caracteres: ").upper()
t = []
v = t.append(s)
c = 0
while (c < size(t)):
		c = 1
	c = c + 1
print(str(s).replace(' ',''))
-- ERROR:
File "XXXX", line 8
    c = c + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:22:56) 
-- CODE:
from numpy import*
s = input("caracteres: ").upper()
t = []
v = t.append(s)
c = 0

print(str(s).replace(' ',''))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:22:03) 
-- CODE:
from numpy import*
s = input("caracteres: ").upper()
s = s.replace(' ','')
inv = ""
i = -1
b = 1
c = 0
while (i >= -len(s)):
	inv = inv + s[i]
	if(s[c]) != (s[i]):
		b = 0
	c = c + 1
	i = i - 1
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:22:28) 
-- CODE:
from numpy import*
s = input("caracteres: ").upper()
s = s.replace(' ','')
inv = ""
i = -1
b = 1
c = 0
while (i >= -len(s)):
	inv = inv + s[i]
	if(s[c]) != (s[i]):
		b = 0
	c = c + 1
	i = i - 1
print(s)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:23:13) 
-- CODE:
from numpy import*
s = input("caracteres: ").upper()
s = s.replace(' ','')
inv = ""
i = -1
b = 1
c = 0
while (i >= -len(s)):
	inv = inv + s[i]
	if(s[c]) != (s[i]):
		b = 0
	c = c + 1
	i = i - 1
print(s)
print(b)
-- EXECUTION TIME:
0.439893
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
